--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         </table>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" crossorigin="anonymous"></script>
   </body>
 </html>
