--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <body>
     <div class="container">
       <h1>Dice Job Search Data</h1>
+      <div class="popular-roles">
+        <!-- populate in run time from JS -->
+      </div>
       <div class="search-container">
         <input type="text" id="jobInput" placeholder="Enter job title" />
         <select id="dateFilter">
@@ -20,6 +23,7 @@
           <option value="SEVEN" selected>Last 7 Days</option>
         </select>
         <select id="workSetting">
+          <option value="All">All</option>
           <option value="On-Site">On-Site</option>
           <option value="Hybrid">Hybrid</option>
           <option value="Remote">Remote</option>
