added default company search

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div class="search-container">
         <input type="text" id="jobInput" placeholder="Enter job title" />
         <select id="dateFilter">
-          <option value="THREE">Last 3 Days</option>
-          <option value="SEVEN" selected>Last 7 Days</option>
+          <option value="THREE" selected>Last 3 Days</option>
+          <option value="SEVEN">Last 7 Days</option>
         </select>
         <select id="workSetting">
           <option value="All">All</option>
